--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@ let responseSubmitted=false;
 let trialStartTime=null;
 const visuals=[];
 let completedTrials=0;
+let animalIndex = 0; // add near the top of your script
+
 
 window.onload = async () => {
   while (!participantID) {
@@ -919,6 +921,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
