--- a/index.html
+++ b/index.html
@@ -616,14 +616,14 @@ function showRealTrialsIntro() {
       padding:40px;box-sizing:border-box;">
       <h1 style="color:#4b2e83; font-size:2em; margin-bottom:20px;">Amazing work!</h1>
       <p style="max-width:800px; font-size:1.3em; text-align:center; line-height:1.6; margin-bottom:20px;">
-        I need your help! This time, when I get in the elevator you will stay outside. When the door closes,  <br>
-you won’t hear the song anymore even though it will keep playing in the elevator for me. Keep singing the song in your head <br>
-so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br>
+        I need your help! <br><br> This time, when I get in the elevator you will stay outside. When the door closes,  
+you won’t hear the song anymore even though it will keep playing in the elevator for me. <br> Keep singing the song in your head
+so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br><br>
 If the music stayed the same, that was a normal elevator. <br>
 But if the speed of the music changed, then Melody must have ridden the magical elevator! <br>
-So listen carefully, and keep the music playing in your head. <br>
+So listen carefully, and keep the music playing in your head. 
 Then, choose which elevator I rode: the normal one, or the magical one! <br><br>
- Are you ready? <br>
+ Are you ready? 
  Let’s go!
 <br><br>
       </p>
@@ -953,6 +953,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
