--- a/index.html
+++ b/index.html
@@ -578,13 +578,13 @@ function showPitchResponseScreen(correctAnswer, callback) {
         <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
           I need your help! This time, when I get in the elevator you will stay outside. When the door closes,  you won’t hear the song anymore even though it will keep playing in the elevator for me. Keep singing the song in your head so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br><br>
 If the music stayed the same, that was a normal elevator.<br>
-But if the pitch of the music changed, then Melody must have ridden the magical elevator! <br>
+But if the pitch of the music changed, then I must have ridden the magical elevator! <br>
 So listen carefully, and keep the music playing in your head.<br>
 Then, choose which elevator I rode: the normal one, or the magical one!<br>
  Are you ready?<br>
  Let’s go!
         </p>
-        <audio id="pitchInstructions" src="PT_PITCH_INSTRUCTIONS.mp3"></audio>
+        <audio id="pitchInstructions" src="PITCH_INSTRUCTIONS.mp3"></audio>
       </div>
     `);
 
@@ -620,7 +620,7 @@ function showRealTrialsIntro() {
 you won’t hear the song anymore even though it will keep playing in the elevator for me. <br> Keep singing the song in your head
 so that when the elevator gets to the next floor and the doors open up, you can tell me if I was in the normal elevator or the magical one. <br><br>
 If the music stayed the same, that was a normal elevator. <br>
-But if the speed of the music changed, then Melody must have ridden the magical elevator! <br>
+But if the speed of the music changed, then I must have ridden the magical elevator! <br>
 So listen carefully, and keep the music playing in your head. 
 Then, choose which elevator I rode: the normal one, or the magical one! <br><br>
  Are you ready? 
@@ -953,6 +953,7 @@ setupVisualElements();
 </script>
 </body>
 </html>
+
 
 
 
